# raspberry-controller

./: Cargo.toml  README.md  cargo.toml  main.rs  run.sh  server.py
services/: serve-and-ate.service  server.py
src/: main.rs
webapp/: index.html  script.js  styles.css
