[package]
name = "serve-and-ate-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
enigo = { version = "0.1", features = ["with_serde"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.19"